--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
+*{
   text-align: center;
   
 }
 
 input[type=submit],
 button{
-  border-radius: 4px;
+  
   padding: 10px;
-  margin-left: 5px;
+  margin: 5px 15px 15px 5px;
   width: 20%;
   height: 5%;
   color: rgb(239, 245, 249);
   background-color: #2C2C2D;
   cursor: pointer;
-  margin: 10px;
   border: none;
-  box-shadow: 0px 0px 0px 3px #2c2c2d0f;
-  transition-duration: 0.35s;
+  box-shadow: 0px 0px 0px 0.4 #2c2c2d0f;
+  transition-duration: 0.45s;
 }
 .btnX{
   top: 0;
@@ -24,24 +23,27 @@ button{
   position: absolute;
   height: 30px;
   max-width: 30px;
-  
-  
-  
-}
+  }
+
+
 
 button:hover{
-  background-color: rgb(192, 197, 196);
+  background-color: rgb(90, 129, 121);
   border: none;
 }
 input[type=submit]:hover{
-  background-color: rgb(192, 197, 196);
+  background-color: rgb(90, 129, 121);
   border: none;
+}
+.btn-div button{
+  margin: 10px 10px 28px 10px;
+  
 }
 
 
 .post, .customerDetails{
   min-width: 50%;
-  max-width: 50%;
+  max-width: 85%;
   background-color: #ccd3c293;
   border-radius: 7px;
   margin: auto;
@@ -60,8 +62,8 @@ table{
 
 }
 .add-container{
-  min-width: 50%;
-  max-width: 40%;
+ 
+  max-width: 70%;
   background-color: rgba(137, 167, 145, 0.361);
   margin: auto;
   place-items: center;
@@ -70,11 +72,20 @@ table{
 
 }
 
-input[type=text]{
+
+input[type=text],
+input[type=number],
+input[type=url]{
   margin: 4px;
-  padding: 10px;
+  padding: 10px 10px 10px 10px;
+
   
 }
+td, th{
+ margin: 0px 100px 0px 0px;
+ padding: 10px;
+}
+
 .neg {
   color: red;
   background: lightgrey;
